Bug #9580 --- FES | Temporary structure noc | fields alignment is not getting properly hole form --- Done And Bug #9565 --- FES | Provisional fire noc | form detail | purpose of building use field name is not clear and cutting --- Done

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1079,3 +1079,4 @@ h2 {color: #333; font-size:18px; margin-bottom: 18px;
 // Select Tag
 .ng-select.ng-select-multiple .ng-select-container .ng-value-container .ng-value {  margin-bottom: 0 !important;  padding: 1px 5px !important;}
 
+.radioBtnError {margin-bottom: 15px !important}
